--- a/mobile.css
+++ b/mobile.css
@@ -7,31 +7,42 @@ html {
     font-size: 62.5%;
 }
 .header {
-    margin: 0 1rem;
+    margin: 1rem 1rem;
     min-width: 280px;
-    height: 200px;
-    background-color: bisque;
+    height: 100px;
 }
-.header__title {
-    text-align: center;
-    color: brown;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1.8rem;
-    font-weight: bold;
+.header__container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.header__title:hover {
-    text-decoration: underline;
+.header__logo {
+    width: 35%;
+    height: 80%;
 }
-.header__parrafo {
-    font-size: 1.4rem;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 300;
-    color: crimson;
+.header__nav {
+    display: flex;
+    align-items: center;
+    width: 70%;
+    height: 100%;
 }
-.main {
-    min-width: 280px;
+.header__nav--name {
+    background-color: gray;
+    border: 0.1rem solid black;
+    box-shadow: 0.3rem 0.3rem 1rem  grey;
+    border-radius: 0.5rem;
+    font-size: 1.3rem;
+    width: 4rem;
+    color: #fff;
     height: auto;
-    background-color: blanchedalmond;
-    margin: 0 1rem;
 }
-
+.header__nav--buscador {
+    width: 10rem;
+}
+.header__list {
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+}
