--- a/mobile.css
+++ b/mobile.css
@@ -7,7 +7,8 @@ html {
     font-size: 62.5%;
 }
 .header {
-    margin: 1rem 1rem;
+    background: linear-gradient(0deg, rgba(7,252,247,1) 40%, rgba(7,155,175,1) 78%);
+    margin: 0 0;
     min-width: 280px;
     height: 100px;
 }
@@ -19,10 +20,23 @@ html {
     align-items: center;
 }
 .header__logo {
-    width: 35%;
-    height: 80%;
+    width: 40%;
+    height: 100%;
+}
+.header__logo--img {
+    width: 5rem;
+    height: 4rem;
+}
+.header__logo--img {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url("./imagenes/8511933_3903483.svg");
 }
 .header__nav {
+    padding: 0 0.3rem;
     display: flex;
     align-items: center;
     width: 70%;
@@ -39,10 +53,31 @@ html {
     height: auto;
 }
 .header__nav--buscador {
-    width: 10rem;
+    background-color:rgba(7,252,247,1);
+    width: 7rem;
 }
 .header__list {
+    padding-top: 2.8rem;
+    width: 10rem;
+    height: 90%;
     display: flex;
     align-items: center;
     list-style-type: none;
+}
+.header__item {
+    margin: 0 0.5rem;
+    align-items: center;
+    width: 40%;
+    height: 5rem;
+}
+.header__link {
+    color: black;
+    font-weight: bold;
+    font-size: 1.5rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-decoration: none;
+}
+.header__link:hover {
+    text-decoration: underline;
+
 }
