--- a/mobile.css
+++ b/mobile.css
@@ -1,3 +1,8 @@
+:root {
+    --color-letra:#fff;
+    --color-fondo:#0d52ff;
+    --fuente-: Gotham Narr,Helvetica,Arial,sans-serif;
+}
 * {
     box-sizing: border-box;
     padding: 0;
@@ -7,7 +12,7 @@ html {
     font-size: 62.5%;
 }
 .header {
-    background: linear-gradient(0deg, rgba(7,252,247,1) 40%, rgba(7,155,175,1) 78%);
+    background-color:var(--color-fondo);
     margin: 0 0;
     min-width: 280px;
     height: 100px;
@@ -53,7 +58,6 @@ html {
     height: auto;
 }
 .header__nav--buscador {
-    background-color:rgba(7,252,247,1);
     width: 7rem;
 }
 .header__list {
@@ -71,7 +75,7 @@ html {
     height: 5rem;
 }
 .header__link {
-    color: black;
+    color: var(--color-letra);
     font-weight: bold;
     font-size: 1.5rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -80,4 +84,78 @@ html {
 .header__link:hover {
     text-decoration: underline;
 
+}
+.main {
+    background-color: #0d52ff;
+    height: auto;
+    min-width: 280px;
+    display: flex;
+    flex-direction: column;
+}
+.main__box__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 1.5rem;
+    width: 100%;
+    height: auto;
+}
+.main__box--blue {
+    margin: 1rem 0;
+    flex-direction: column;
+    display: flex;
+    box-shadow: 0.5rem 0.3rem 1.5rem blue;
+    width: 95%;
+    min-height: 10rem;
+    border: 0.2rem;
+}
+.main__box--blue h2 {
+    font-size: 1.8rem;
+    line-height: 2rem;
+    text-align: center;
+    padding: 0.5rem;
+    font-weight: 700;
+    font-family: var(--fuente-);
+    color: var(--color-letra);
+
+}
+.main__box--blue p {
+    font-size: 1.2rem;
+    color: var(--color-letra);
+    font-family: var(--fuente-);
+    padding: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    text-align: left;
+}
+.main__box__container--whitebox {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 1.5rem;
+    width: 100%;
+    height: auto;
+}
+.main__box--white {
+    width: 95%;
+    height: 9rem;
+    border: 0.2rem;
+    display: flex ;
+    flex-direction: column;
+}
+.main__box--white h2{
+    font-family: var(--fuente-);
+    font-weight: 700;
+    font-size: 1.8rem;
+
+}
+.main__box--white p{
+    color: black;
+    font-family: var(--fuente-);
+    font-weight: 300;
+    line-height: 1.4rem;
+    font-size: 1.4rem;
 }
