Se hizo plantilla password o usuario invalido email invalido y recuperar contraseña

--- a/Curso-Front-End-Developer/Laptop.css
+++ b/Curso-Front-End-Developer/Laptop.css
@@ -13,6 +13,10 @@
 .login__title {
     font-size: 2.8rem;
     }
+.login__text-pass-recovery {
+    width: 32rem;
+
+}    
 .login__input + .login__title {
     margin-left: -6rem;
     }
@@ -21,8 +25,20 @@
     height: 4rem;
 }
 .primary__button {
+    margin: 3rem 0;
     width: 50%;
 }
 .login_link {
-    font-size: 2.4rem;
+    padding: 1rem;
+    line-height: 6rem;
+    font-size: 2rem;
+}
+.form__invalid-text {
+    margin: 1.6rem 0;
+    padding: 0.8rem;
+    
+    font-size: 1.6rem;
+}
+.primary__button:last-child {
+    margin: 5rem;
 }
