--- a/Curso-Front-End-Developer/mobile.css
+++ b/Curso-Front-End-Developer/mobile.css
@@ -47,16 +47,14 @@ html {
 .form__container {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
     flex-direction: column;
 
     width: 100%;
-    height: 80%;
+    height: 100%;
 }
 .login__title { 
     margin: 0;
-    margin-right: 14rem;
-    text-align:start;
+    margin-right: 13rem;
     font-size: var(--font-size);
     font-weight: bold;
     line-height: 3.0rem;
@@ -68,9 +66,33 @@ html {
 
     text-align: center;
     font-family: var(--font-Quicksand);
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     
     color: #FC6767;
+}
+.login__title-pass-recovery{
+    margin: 1rem 0;
+    height: 3rem;
+
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bold;
+    line-height: 3rem;
+
+}
+.login__text-pass-recovery {
+    margin: 1rem 3.5rem;
+    
+    text-align: center;
+    font-size: var(--font-size);
+    font-weight: 300s;
+    line-height: 2rem;
+
+    color: var(--Very-light-pink);
+}
+.login__password--recover {
+    margin-top: 2rem;
+
 }
 .login__title:hover {
     cursor: pointer;
@@ -91,7 +113,7 @@ html {
     
 }
 .input__login--invalid{
-    border:0.1rem solid red;
+    border:0.1rem solid #F52E2E;
     background-color: #FFF4F4;
 }
 .login__input:hover {
@@ -100,7 +122,7 @@ html {
 .primary__button {
     width: 26rem;
     height: 5rem;
-    margin: 3.0rem var(--margin-sides);
+    margin: 3rem var(--margin-sides);
     
     
     font-size: var(--font-size);
@@ -108,11 +130,19 @@ html {
     font-family: var(--font-Quicksand);
 
     border-radius: 0.8rem;
-    color: 		#98FB98;
+    color:#98FB98;
     border: 0.1rem solid var(--Hospital-green);
     background-color: var(--Hospital-green);
 }
+
+.login__valid--mail {
+    margin-left: 2rem;
+
+    color:#F52E2E;
+}
 .button--invalid {
+    margin: 0.5rem;
+
     color: var(--color-input-text);
     border-color: var(--Very-light-pink);
     background-color: var(--Very-light-pink);
@@ -120,14 +150,20 @@ html {
 .primary__button:hover {
     cursor: pointer;
 }
+.button--email-submit {
+    color: var(--White);
+}
 .login_link {
     margin: 0 var(--margin-sides);
 
     text-align: center;
     font-family: var(--font-Quicksand);
-    font-size: 1.4rem;
+    font-size: 1.6rem;
 
     color: #228B22;
+}
+.login__link--pass-recovery {
+    color: var(--Hospital-green);
 }
 .login_link:hover {
     
@@ -135,12 +171,11 @@ html {
     text-decoration: underline;
     color: blue;
 }
-
 .primary__button:last-child{
     margin-bottom: 0.8rem;
-    margin-top: 16rem;
+    margin-top: 34rem;
     
     background-color: var(--White);
-    color: 		#98FB98;
+    color:#98FB98;
     
 }
