--- a/Curso-Practico-JavaScript/mobile.css
+++ b/Curso-Practico-JavaScript/mobile.css
@@ -51,6 +51,11 @@ html {
     height: auto;
     margin: 0 0.4rem;
 }
+.navbar--mobile__icon--car {
+    width: 30px;
+    height: auto;
+    margin: 0 0.4rem;
+}
 .navbar__logo {
     width: 160px;
 }
@@ -166,6 +171,105 @@ html {
     
     color: var(--Hospital-green);
 }
+.main {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+}
+.in-shop-car__container {
+    min-width: 320px;
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+
+
+    margin: 0 auto;
+    padding: 1rem;
+}
+.in-shop-car {
+    display: grid;
+    grid-template-rows: 40px auto;
+    row-gap: 40px;
+    place-items: center;
+    
+    width: 100%;
+    height: 100%;
+}
+.in-shop-car__title {
+    display: flex;
+    align-items: center;
+
+    width: 100%;
+    height: 100%;
+
+    font-size: 1.4rem;
+    font-weight: bold;
+    font-family: var(--font-Quicksand);
+}
+.in-shop-car__arrowicon {
+    width: 15px;
+    height: 15px;
+    
+    background-image: url('./icons/flechita.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.in-shop-car > figure {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+    width: 100%;
+    height: 100%;
+}
+.in-shop-car > figure img {
+    object-fit: cover;
+    width: 100px;
+    height: 100px;
+
+    border-radius: 1.5rem;
+    margin: 0 0.4rem;
+}
+.in-shop-car > figure figcaption {
+
+    margin: 0 0.4rem;
+
+    font-weight: 300;
+    font-family: var(--font-Quicksand);
+    font-size: 1.2rem;
+    color: var(--Very-light-pink);
+}
+.in-shop-car > figure p {
+    margin: 0 0.4rem; 
+
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+.in-shop-car__total-cost {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 4rem;
+
+    background-color: #FBFBFB;
+    font-size: 1.4rem;
+    font-weight: bold;
+    padding: 1rem;
+}
+.primary__button {
+    width: 100%;
+    height: 5rem;
+    
+    font-size: 1.8rem;
+    font-weight: bold;
+    font-family: var(--font-Quicksand);
+
+    border-radius: 0.8rem;
+    color:var(--White);
+    border: 0.1rem solid var(--Hospital-green);
+    background-color: var(--Hospital-green);
+}
 .inactive {
     display: none;
 }
@@ -254,8 +358,10 @@ html {
         background-size: contain;
     }
     .navbar--right__icon {
+        cursor: pointer;
         display: flex;
         align-items: center;
+        
         width: 40px;
         height: 40px;
     }
@@ -265,28 +371,12 @@ html {
     .Desktop-menu ul li a{
         font-size: 1.6rem;
     }
-}   
-@media (min-width:1200px){ 
-    .navbar--left li {
-        list-style: none;
-    
-    
-        padding: 0.4rem;
-        margin: 0 1.8rem;
+    .in-shop-car__container{
+        position: absolute;
+        top: 0;
+        right: 0;
 
-        font-size: 1.4rem;
-        font-family: var(--font-Quicksand);
-    }
-    .navbar--left li a {
-        font-size: 2rem;
-    }
-    .navbar--right li {
-        font-size: 1.8rem;
-    }
-    .Desktop-menu {
-        width: 160px
-    }
-    .Desktop-menu ul li a {
-        font-size: 2rem;
-    }
-}   
+        width: 300px;
+        height: 600px;
+    }   
+}
